Removed unused code